--- a/Site-Cadastro/Front/index.html
+++ b/Site-Cadastro/Front/index.html
@@ -33,7 +33,7 @@
         
     </div>
 
-    <script src="script.js"></script>
+    <script src="script/script-cadastro.js"></script>
     
 </body>
 </html>
